<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.parcial1miguelaurela.MainActivity">

    <ScrollView
        android:layout_width="414dp"
        android:layout_height="735dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="706dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="84dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/app_name"
                    android:textSize="@dimen/Text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtNumber"
                    android:layout_width="268dp"
                    android:layout_height="101dp"
                    android:layout_marginStart="73dp"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="72dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnGuardarNumero" />

                <EditText
                    android:id="@+id/edtNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="104dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="100dp"
                    android:ems="10"
                    android:hint="@string/Number"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <Button
                    android:id="@+id/btnGuardarNumero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="96dp"
                    android:layout_marginEnd="120dp"
                    android:text="@string/btnGuardarNumero"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/txtresult"
                    android:layout_width="164dp"
                    android:layout_height="71dp"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="148dp"
                    app:layout_constraintStart_toEndOf="@+id/radiogruop"
                    app:layout_constraintTop_toBottomOf="@+id/btnGuardarNumero" />

                <Button
                    android:id="@+id/btnCalcular"
                    android:layout_width="129dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="84dp"
                    android:layout_marginTop="252dp"
                    android:text="@string/Calculate"
                    app:layout_constraintStart_toEndOf="@+id/radiogruop"
                    app:layout_constraintTop_toBottomOf="@+id/btnGuardarNumero" />

                <Button
                    android:id="@+id/btnBorrarVector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="84dp"
                    android:layout_marginTop="312dp"
                    android:text="@string/daleteVector"
                    app:layout_constraintStart_toEndOf="@+id/radiogruop"
                    app:layout_constraintTop_toBottomOf="@+id/btnGuardarNumero" />

                <RadioGroup
                    android:id="@+id/radiogruop"
                    android:layout_width="130dp"
                    android:layout_height="187dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="176dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnGuardarNumero">

                    <RadioButton
                        android:id="@+id/rbMayorValor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/MayorValor"
                        tools:layout_editor_absoluteX="57dp"
                        tools:layout_editor_absoluteY="427dp" />

                    <RadioButton
                        android:id="@+id/rbMenorValor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/MenorValor"
                        tools:layout_editor_absoluteX="218dp"
                        tools:layout_editor_absoluteY="427dp" />

                    <RadioButton
                        android:id="@+id/rbOdernarVector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/OrdenarVector"
                        tools:layout_editor_absoluteX="57dp"
                        tools:layout_editor_absoluteY="506dp" />

                    <RadioButton
                        android:id="@+id/rbPromedio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mean"
                        tools:layout_editor_absoluteX="218dp"
                        tools:layout_editor_absoluteY="506dp" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>